--- a/css/location.css
+++ b/css/location.css
@@ -8,8 +8,8 @@ html, body {
 }
 
 body { 
-    background: url('../img/branch.png') top left no-repeat,
-    url('../img/branch2.png') bottom right no-repeat;
+    background: url('../img/branch-left.png') top left no-repeat,
+    url('../img/branch-right.png') bottom right no-repeat;
     background-attachment: fixed;
     text-shadow: 0 1px 3px rgba(0,0,0,.5);
     color: #ffffff;
